# drive-through-simulation

./: Cargo.toml  README.md  config.yaml
src/: clock.rs  customer.rs  duration.rs  event.rs  history.rs  lib.rs  main.rs  output.rs  simulation.rs  state.rs  statistics.rs
src/config/: customer.rs  fixed.rs  mod.rs  random.rs
tests/: validation_tests.rs
