[package]
name = "drive-through-simulation"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
config = { version = "0.15.19", features = ["yaml"] }
humantime = "2.1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
